--- a/package.json
+++ b/package.json
@@ -9,21 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.1.8",
     "@heroicons/react": "^2.1.5",
+    "@prisma/client": "^5.19.1",
     "gray-matter": "^4.0.3",
     "marked": "^14.1.2",
     "next": "14.2.11",
+    "qs": "^6.13.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "use-debounce": "^10.0.3"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^20",
+    "@types/qs": "^6.9.16",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.11",
     "postcss": "^8.4.45",
+    "prisma": "^5.19.1",
     "tailwindcss": "^3.4.11",
     "typescript": "^5"
   }
